fix: consolidar
